[gd_scene load_steps=8 format=2]

[ext_resource path="res://exo2_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://AchievementDetails.gd" type="Script" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/1x/medal2.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.258824, 0.980392, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.141176, 0.14902, 0.156863, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="AchievementDetails" type="Panel"]
unique_name_in_owner = true
margin_top = 65.0
margin_right = 640.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 250.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0

[node name="DetailIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBox"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 100.0
grow_vertical = 0
rect_min_size = Vector2( 100, 100 )
expand = true
stretch_mode = 6

[node name="DetailDescription" type="Label" parent="MarginContainer/VBoxContainer/HBox"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 600.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
autowrap = true

[node name="DetailProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 104.0
margin_right = 600.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailProgress"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 600.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 596.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Perks" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_top = 25.0
margin_right = 592.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="RewardButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false
margin_left = 502.0
margin_top = 0.0
margin_right = 592.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
focus_mode = 0
size_flags_vertical = 4
disabled = true
enabled_focus_mode = 0
text = ""
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/RewardButton" to="." method="_on_RewardButton_pressed"]
